# AgentPay-SDK

./: .gitignore  EARNING_FEATURES.md  LICENSE  README.md  pyproject.toml
agentpay/: __init__.py  agent_registry.py  escrow_manager.py  http_client.py  ledger_manager.py  payment_engine.py  sdk.py
agentpay/api/: app.py  models.py  routes.py
agentpay/models/: __init__.py  agent.py  ledger.py  payment.py  policy.py  wallet.py
agentpay/rails/: __init__.py  base.py  internal_credits.py
agents/: __init__.py
agents/base/: __init__.py  base_agent.py  capabilities.py
examples/: autonomous_agent.py  autonomous_agent_full.py  test_earning.py
tests/: test_api.py  test_models.py  test_rails.py  test_sdk.py  test_step2_integration.py
